gui: Expand source view and make encoding fixed

--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -107,9 +107,11 @@
             <child>
               <object class="GtkButton" id="instruction_dialog_cancel_button">
                 <property name="label">gtk-cancel</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -121,9 +123,11 @@
             <child>
               <object class="GtkButton" id="instruction_dialog_ok_button">
                 <property name="label">gtk-ok</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -286,6 +290,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="related_action">action2</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
                 <property name="yalign">0.23000000417232513</property>
               </object>
@@ -304,6 +310,8 @@
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
+                <property name="related_action">action1</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -360,6 +368,7 @@
             <property name="can_focus">False</property>
             <child>
               <object class="GtkMenuItem" id="file_menu">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_File</property>
@@ -371,6 +380,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="file_menu_open">
                         <property name="label">gtk-open</property>
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Open a new file</property>
@@ -407,6 +417,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="file_menu_quit">
                         <property name="label">gtk-quit</property>
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -419,6 +430,7 @@
             </child>
             <child>
               <object class="GtkMenuItem" id="menuitem3">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_View</property>
@@ -430,6 +442,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="view_menu_forward">
                         <property name="label">gtk-go-forward</property>
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Move forward in history</property>
@@ -441,6 +454,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="view_menu_backward">
                         <property name="label">gtk-go-back</property>
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Move backwards in history</property>
@@ -457,6 +471,7 @@
                     </child>
                     <child>
                       <object class="GtkCheckMenuItem" id="view_menu_mangle">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Mangle e.g., C++ symbols</property>
@@ -467,6 +482,7 @@
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="view_toggle_instructions_data">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Toggle data/instruction view</property>
@@ -476,6 +492,7 @@
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="view_focus_references">
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Focus symbol references</property>
@@ -489,6 +506,7 @@
             </child>
             <child>
               <object class="GtkMenuItem" id="edit_menu">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_Help</property>
@@ -500,6 +518,7 @@
                     <child>
                       <object class="GtkImageMenuItem" id="menu_help_about">
                         <property name="label">gtk-about</property>
+                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -522,8 +541,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="invisible_char">●</property>
-            <accelerator key="l" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
             <accelerator key="j" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
+            <accelerator key="l" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -653,7 +672,7 @@
                                   </object>
                                   <packing>
                                     <property name="resize">False</property>
-                                    <property name="shrink">True</property>
+                                    <property name="shrink">False</property>
                                   </packing>
                                 </child>
                               </object>
@@ -690,6 +709,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="has_tooltip">True</property>
+                                        <property name="vexpand">True</property>
                                         <property name="editable">False</property>
                                         <property name="left_margin">2</property>
                                         <property name="right_margin">2</property>
@@ -746,9 +766,11 @@
                                 <child>
                                   <object class="GtkButton" id="edit_instruction_model_button">
                                     <property name="label">gtk-edit</property>
+                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="receives_default">True</property>
+                                    <property name="use_action_appearance">False</property>
                                     <property name="use_stock">True</property>
                                   </object>
                                   <packing>
@@ -1039,9 +1061,11 @@
             <child>
               <object class="GtkButton" id="network_dialog_ok_button">
                 <property name="label">gtk-ok</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
                 <property name="image_position">top</property>
               </object>
@@ -1099,9 +1123,11 @@ This message is only shown once. </property>
             <child>
               <object class="GtkButton" id="preferences_cancel_button">
                 <property name="label">gtk-cancel</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -1113,9 +1139,11 @@ This message is only shown once. </property>
             <child>
               <object class="GtkButton" id="preference_ok_button">
                 <property name="label">gtk-ok</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -1156,9 +1184,11 @@ This message is only shown once. </property>
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkColorButton" id="history_color0">
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="color">#afc8ffffba67</property>
                   </object>
                   <packing>
@@ -1169,9 +1199,11 @@ This message is only shown once. </property>
                 </child>
                 <child>
                   <object class="GtkColorButton" id="history_color1">
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="color">#4902eb8472e9</property>
                   </object>
                   <packing>
@@ -1182,9 +1214,11 @@ This message is only shown once. </property>
                 </child>
                 <child>
                   <object class="GtkColorButton" id="history_color2">
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="color">#7373d2d21616</property>
                   </object>
                   <packing>
@@ -1260,11 +1294,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="instruction_font">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
                 <property name="use_font">True</property>
@@ -1279,11 +1315,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="symbol_font">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1296,11 +1334,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="source_font">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 10</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 10</property>
               </object>
@@ -1313,11 +1353,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="fontbutton1">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1344,11 +1386,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="references_font">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1375,11 +1419,13 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="instruction_info_font">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="font">Sans 11</property>
-                <property name="preview_text"/>
+                <property name="preview_text"></property>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Sans 11</property>
               </object>
