gui: Cleanup glade file

--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -107,11 +107,9 @@
             <child>
               <object class="GtkButton" id="instruction_dialog_cancel_button">
                 <property name="label">gtk-cancel</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -123,11 +121,9 @@
             <child>
               <object class="GtkButton" id="instruction_dialog_ok_button">
                 <property name="label">gtk-ok</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -290,8 +286,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="related_action">action2</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
                 <property name="yalign">0.23000000417232513</property>
               </object>
@@ -310,8 +304,6 @@
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
-                <property name="related_action">action1</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -368,7 +360,6 @@
             <property name="can_focus">False</property>
             <child>
               <object class="GtkMenuItem" id="file_menu">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_File</property>
@@ -380,7 +371,6 @@
                     <child>
                       <object class="GtkImageMenuItem" id="file_menu_open">
                         <property name="label">gtk-open</property>
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Open a new file</property>
@@ -417,7 +407,6 @@
                     <child>
                       <object class="GtkImageMenuItem" id="file_menu_quit">
                         <property name="label">gtk-quit</property>
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -430,7 +419,6 @@
             </child>
             <child>
               <object class="GtkMenuItem" id="menuitem3">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_View</property>
@@ -442,7 +430,6 @@
                     <child>
                       <object class="GtkImageMenuItem" id="view_menu_forward">
                         <property name="label">gtk-go-forward</property>
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Move forward in history</property>
@@ -454,7 +441,6 @@
                     <child>
                       <object class="GtkImageMenuItem" id="view_menu_backward">
                         <property name="label">gtk-go-back</property>
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Move backwards in history</property>
@@ -471,7 +457,6 @@
                     </child>
                     <child>
                       <object class="GtkCheckMenuItem" id="view_menu_mangle">
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Mangle e.g., C++ symbols</property>
@@ -482,7 +467,6 @@
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="view_toggle_instructions_data">
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Toggle data/instruction view</property>
@@ -492,7 +476,6 @@
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="view_focus_references">
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Focus symbol references</property>
@@ -506,7 +489,6 @@
             </child>
             <child>
               <object class="GtkMenuItem" id="edit_menu">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">_Help</property>
@@ -518,7 +500,6 @@
                     <child>
                       <object class="GtkImageMenuItem" id="menu_help_about">
                         <property name="label">gtk-about</property>
-                        <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
@@ -541,8 +522,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="invisible_char">●</property>
-            <accelerator key="j" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
             <accelerator key="l" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
+            <accelerator key="j" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -636,9 +617,10 @@
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkPaned" id="paned2">
-                                <property name="height_request">254</property>
+                                <property name="height_request">300</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="vexpand">True</property>
                                 <property name="orientation">vertical</property>
                                 <child>
                                   <object class="GtkScrolledWindow" id="instruction_scrolled_window">
@@ -730,7 +712,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="resize">True</property>
+                                <property name="resize">False</property>
                                 <property name="shrink">True</property>
                               </packing>
                             </child>
@@ -766,11 +748,9 @@
                                 <child>
                                   <object class="GtkButton" id="edit_instruction_model_button">
                                     <property name="label">gtk-edit</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="receives_default">True</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="use_stock">True</property>
                                   </object>
                                   <packing>
@@ -1061,11 +1041,9 @@
             <child>
               <object class="GtkButton" id="network_dialog_ok_button">
                 <property name="label">gtk-ok</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
                 <property name="image_position">top</property>
               </object>
@@ -1123,11 +1101,9 @@ This message is only shown once. </property>
             <child>
               <object class="GtkButton" id="preferences_cancel_button">
                 <property name="label">gtk-cancel</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -1139,11 +1115,9 @@ This message is only shown once. </property>
             <child>
               <object class="GtkButton" id="preference_ok_button">
                 <property name="label">gtk-ok</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -1184,11 +1158,9 @@ This message is only shown once. </property>
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkColorButton" id="history_color0">
-                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="color">#afc8ffffba67</property>
                   </object>
                   <packing>
@@ -1199,11 +1171,9 @@ This message is only shown once. </property>
                 </child>
                 <child>
                   <object class="GtkColorButton" id="history_color1">
-                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="color">#4902eb8472e9</property>
                   </object>
                   <packing>
@@ -1214,11 +1184,9 @@ This message is only shown once. </property>
                 </child>
                 <child>
                   <object class="GtkColorButton" id="history_color2">
-                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="color">#7373d2d21616</property>
                   </object>
                   <packing>
@@ -1294,13 +1262,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="instruction_font">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
                 <property name="use_font">True</property>
@@ -1315,13 +1281,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="symbol_font">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1334,13 +1298,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="source_font">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 10</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 10</property>
               </object>
@@ -1353,13 +1315,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="fontbutton1">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1386,13 +1346,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="references_font">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Monospace 11</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Monospace 11</property>
               </object>
@@ -1419,13 +1377,11 @@ This message is only shown once. </property>
             </child>
             <child>
               <object class="GtkFontButton" id="instruction_info_font">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="font">Sans 11</property>
-                <property name="preview_text"></property>
+                <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
                 <property name="font_name">Sans 11</property>
               </object>
